[package]
name = "feedstore"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Storage for append-only logs"
repository = "https://github.com/sbillig/feedstore"
documentation = "https://docs.rs/feedstore/"
readme = "README.md"
keywords = []

[dependencies]
sled = "0.31.0"
snafu = "0.6.3"
serde = "1.0"
bincode = "1.2.1"
num = "0.2.1"

[dev-dependencies]
blake3 = "0.3.3"
serde = {version = "1.0", features = ["derive"]}
